[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiac_proteome"
version = "0.1.0"
description = "repository of publically available cardiac proteomic data"
readme = "README.rst"
authors = [
  {name = "Cheyanne Winnie Durham", email = "cheyanne.w.durham@gmail.com"}
]
maintainers = [
  {name = "Cheyanne Winnie Durham", email = "cheyanne.w.durham@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/cheyannewdurham/cardiac_proteome/issues"
changelog = "https://github.com/cheyannewdurham/cardiac_proteome/blob/master/changelog.md"
homepage = "https://github.com/cheyannewdurham/cardiac_proteome"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

